# RL_Technical_Project

./: README.md
deposit/: CMakeLists.txt  package.xml
deposit/launch/: spawn_deposit.launch.py
deposit/models/rect_tunnel/: model.config  model.sdf
deposit/models/shelf/: model.sdf
deposit/scripts/: load_controller_params.sh
deposit/src/: aruco_detector.cpp  biblio_node.cpp  kdl_control.cpp  kdl_robot.cpp  pick_package.cpp  ros2_kdl_node.cpp
deposit/worlds/: personal_project_world.sdf
ros2_fra2mo/config/: amcl.yaml  explore.yaml  navigation.yaml  slam.yaml
ros2_fra2mo/launch/: display_fra2mo.launch.py  fra2mo_amcl.launch.py  fra2mo_explore.launch.py  fra2mo_navigation.launch.py  fra2mo_slam.launch.py  gazebo_fra2mo.launch.py
ros2_fra2mo/maps/: personal_project_world.pgm  personal_project_world.yaml
ros2_fra2mo/models/aruco0/: model.sdf
ros2_fra2mo/models/aruco999/: model.sdf
ros2_fra2mo/models/shelf/: model.config  model.sdf
ros2_fra2mo/rviz_conf/: navigation.rviz
ros2_fra2mo/scripts/: follow_waypoints.py
ros2_fra2mo/urdf/: fra2mo.urdf.xacro  lidar_gazebo_macro.xacro  trailer_macro.xacro
ros2_fra2mo/worlds/: personal_project_world.sdf
ros2_iiwa/iiwa_description/config/: base_frame.yaml  iiwa.config.xacro  iiwa_controllers.yaml
ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
